--- a/day30/classwork/cw.html
+++ b/day30/classwork/cw.html
@@ -3,12 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="stile.css">
+    <title>Flag Flashcards</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
+        .container {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 20px;
+            max-width: 800px;
+            margin: auto;
+            padding: 20px;
+        }
+        .card {
+            border: 2px solid red;
+            padding: 10px;
+            text-align: center;
+            border-radius: 10px;
+        }
+        .card img {
+            width: 100px;
+            height: 60px;
+            display: block;
+            margin: 10px auto;
+        }
+        .title {
+            font-size: 16px;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+    </style>
 </head>
 <body>
-    <div class="div1"></div>
-    <div class="div2"></div>
-    <div class="diva3"></div>
+    <h1>Flag Flashcards</h1>
+    <div class="container">
+        <div class="card">
+            <div class="title">The Flag of Ukraine</div>
+            <img src="https://flagcdn.com/w320/ua.png" alt="Ukraine Flag">
+        </div>
+        <div class="card">
+            <div class="title">The Flag of UAE</div>
+            <img src="https://flagcdn.com/w320/ae.png" alt="UAE Flag">
+        </div>
+        <div class="card">
+            <div class="title">The Flag of United Kingdom</div>
+            <img src="https://flagcdn.com/w320/gb.png" alt="UK Flag">
+        </div>
+        <div class="card">
+            <div class="title">The Flag of USA</div>
+            <img src="https://flagcdn.com/w320/us.png" alt="USA Flag">
+        </div>
+        <div class="card">
+            <div class="title">The Flag of Uruguay</div>
+            <img src="https://flagcdn.com/w320/uy.png" alt="Uruguay Flag">
+        </div>
+        <div class="card">
+            <div class="title">The Flag of Uzbekistan</div>
+            <img src="https://flagcdn.com/w320/uz.png" alt="Uzbekistan Flag">
+        </div>
+        <div class="card">
+            <div class="title">The Flag of Vanuatu</div>
+            <img src="https://flagcdn.com/w320/vu.png" alt="Vanuatu Flag">
+        </div>
+        <div class="card">
+            <div class="title">The Flag of Venezuela</div>
+            <img src="https://flagcdn.com/w320/ve.png" alt="Venezuela Flag">
+        </div>
+        <div class="card">
+            <div class="title">The Flag of Belgium</div>
+            <img src="https://flagcdn.com/w320/be.png" alt="Belgium Flag">
+        </div>
+    </div>
 </body>
 </html>
