--- a/day28/claswork/cw.html
+++ b/day28/claswork/cw.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ka">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Styled Div Elements</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Level 28</title>
+    <style>
+        .box {
+            width: 200px;
+            height: 200px;
+            border: 2px solid black;
+            border-radius: 10px;
+            background-color: lightblue;
+            position: absolute;
+        }
+
+        .box1 {
+            top: 200px;
+            left: 300px;
+            margin-bottom: 50px;
+        }
+
+        .box2 {
+            top: 500px;
+            left: 600px;
+            margin-bottom: 100px;
+        }
+    </style>
 </head>
 <body>
-    <div class="div1"></div>
-    <div class="div2"></div>
+    <div class="box box1"></div>
+    <div class="box box2"></div>
 </body>
 </html>
+
