--- a/day24/homework/hw.html
+++ b/day24/homework/hw.html
@@ -1,93 +1,86 @@
+/* styles.css - CSS გაფორმება */
+body {
+    font-family: Arial, sans-serif; /* განსაზღვრავს ტექსტის ფონტს */
+    margin: 0;
+    padding: 0;
+    background-color: #f8f9fa; /* გვერდის ფონის ფერი */
+}
+
+header {
+    background-color: #343a40;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    font-size: 24px;
+    font-weight: bold; /* ტექსტის სისქე */
+}
+
+nav {
+    background-color: #495057;
+    padding: 10px;
+    text-align: center;
+}
+
+nav a {
+    color: white;
+    text-decoration: none;
+    margin: 15px;
+    font-style: italic; /* ტექსტის სტილი (იტალიური) */
+}
+
+main {
+    padding: 20px;
+    text-align: center;
+}
+
+footer {
+    background-color: #343a40;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    margin-top: 20px;
+}
+
+/* HTML ფაილები */
+
+/* index.html - მთავარი გვერდი */
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ka">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Mate Sikharulidze</title>
+    <title>მთავარი გვერდი</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                
-            </ul>
-        </nav>
-    </header>
+    <header>მათე სიხარულიძე</header>
+    <nav>
+        <a href="index.html">მთავარი</a>
+        <a href="about.html">ჩემს შესახებ</a>
+        <a href="contact.html">კონტაქტი</a>
+    </nav>
     <main>
-        <section class="intro">
-            <h1>Welcome to Mate Sikharulidze's Website!</h1>
-            <p>Hello! I am Mate, a coding and sports enthusiast living in Zahesi. Explore my journey and connect with me!</p>
-        </section>
+        <h2>მოგესალმებით ჩემს პერსონალურ ვებსაიტზე!</h2>
+        <p>მე ვარ მათე სიხარულიძე, დაინტერესებული კოდინგით და სპორტით.</p>
     </main>
-    <footer>
-        <p>&copy; 2025 Mate Sikharulidze. All rights reserved.</p>
-    </footer>
+    <footer>ყველა უფლება დაცულია &copy; 2025</footer>
 </body>
 </html>
 
-<!-- About Me Page -->
+/* about.html - ჩემს შესახებ */
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ka">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me - Mate Sikharulidze</title>
+    <title>ჩემს შესახებ</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                
-            </ul>
-        </nav>
-    </header>
+    <header>ჩემს შესახებ</header>
+    <nav>
+        <a href="index.html">მთავარი</a>
+        <a href="about.html">ჩემს შესახებ</a>
+        <a href="contact.html">კონტაქტი</a>
+    </nav>
     <main>
-        <section class="about">
-            <h1>About Me</h1>
-            <p>My name is Mate Sikharulidze, and I live in Zahesi. I am passionate about coding and sports. Currently, I study at 208 School and GOA Academy, where I am constantly learning and improving my skills.</p>
-            <p>Through my journey, I have developed a strong interest in solving problems and building solutions using technology, as well as maintaining an active lifestyle through various sports activities.</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2025 Mate Sikharulidze. All rights reserved.</p>
-    </footer>
-</body>
-</html>
-
-<!-- Contact Us Page -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - Mate Sikharulidze</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Main Page</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="contact">
-            <h1>Contact Me</h1>
-            <p>If you'd like to get in touch, feel free to contact me:</p>
-            <ul>
-                <li>Phone: 597749977</li>
-                <li>Email: <a href="mailto:example@example.com">example@example.com</a></li>
-            </ul>
-            <p>Looking forward to hearing from you!</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2025 Mate Sikharulidze. All rights reserved.</p>
-    </footer>
-</body>
-</html>
